--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -20,6 +20,8 @@
 	<% @post.comments.each do |comment| %>
 		<div class="well">
 			<p><em>Comment by <strong><%= comment.author %></strong></em></p>
+			<% @created_at = comment.created_at.in_time_zone("America/Chicago") %>
+			<p><em><%= @created_at.strftime("Posted on %m/%d/%Y at %l:%M%p %Z") %></em></p>
 			<p><%= comment.comment_entry %></p>
 		</div>
 	<% end %>
