Added Devise, Gravatar, CarrierWave

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -28,6 +28,17 @@
       </div>
     </nav>
     <div class="container">
+      <% if user_signed_in? %>
+        <div class="pull-right">
+          <p>
+            Welcome, <%= current_user.username %>!</p>
+            <%= image_tag current_user.avatar.url if current_user.avatar.url != nil %>
+          <%= link_to "Edit Profile", edit_user_registration_path, class: "btn btn-primary" %>
+          <%= link_to "Sign Out", destroy_user_session_path, method: :delete, class: "btn btn-danger" %>
+        </div>
+      <% end %>
+    </div>
+    <div class="container">
       <%= yield %>
     </div>
   </body>
