--- a/app/views/comments/_form.html.erb
+++ b/app/views/comments/_form.html.erb
@@ -11,22 +11,9 @@
     </div>
   <% end %>
   <div class="form-group">
-    <div class="field">
-      <%= form.label :author %>
-      <%= form.text_field :author %>
-    </div>
-
-    <div class="field">
-      <%= form.label :comment_entry %>
-      <%= form.text_area :comment_entry, :class => "form-control" %>
-    </div>
-
-    <div class="field">
+      <%= form.text_area :comment_entry, placeholder: "Your comment here...", class: "form-control" %>
       <%= form.hidden_field :post_id, value: @post.id %>
-    </div>
-
-    <div class="actions">
-      <%= form.submit class: "form-control"%>
-    </div>
+      <%= form.hidden_field :user_id, value: current_user.id %>
+      <%= form.submit class: "form-control" %>
   </div>
 <% end %>
