--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -5,11 +5,14 @@
 <div class="container-fluid">
   <div class="row">
     <% @posts.each do |post| %>
-    <div class="col-xs-12 col-md-6">
+    <div class="col-xs-12 col-md-6 clearfix">
       <div class="panel panel-default">
         <div class="panel-heading">
           <h2><%= post.title %></h2>
-          <strong> by <%= post.author %></strong>
+          <% if post.user.avatar.url != nil %>
+            <%= image_tag post.user.avatar.url %>
+          <% end %>
+          <strong> by <%= post.user.username %></strong>
           <% @create_time = post.created_at.in_time_zone("America/Chicago") %>
           <p><%= @create_time.strftime("Posted %m/%d/%Y at %l:%M%P %Z") %></p>
         </div>
@@ -17,7 +20,7 @@
           <%= post.blog_entry %>
         </div>
         <div class="panel-footer">
-          <%= link_to 'Show', post, :class => "btn btn-primary" %>
+          <%= link_to 'Show', post, :class => "btn btn-info" %>
           <%= link_to 'Edit', edit_post_path(post), :class => "btn btn-warning" %>
           <%= link_to 'Delete', post, method: :delete, data: { confirm: 'Are you sure?' }, :class => "btn btn-danger" %>
         </div>
@@ -27,4 +30,4 @@
   </div>
 </div>
 
-<%= link_to 'New Post', new_post_path %>
+<%= link_to 'New Post', new_post_path, class: "btn btn-primary" %>
