--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -3,7 +3,10 @@
 <div class="panel panel-default">
 	<div class="panel-heading">
   		<h2><%= @post.title %></h2>
-  		<strong> by: <%= @post.author %></strong>
+		<p><%= image_tag @post.user.avatar.url if @post.user.avatar.url != nil %></p>
+  		<strong> by: <%= @post.user.username %></strong>
+		<% @create_time = @post.created_at.in_time_zone("America/Chicago") %>
+        <p><%= @create_time.strftime("Posted %m/%d/%Y at %l:%M%P %Z") %></p>
 	</div>
 	<div class="panel-body">
   		<%= @post.blog_entry %>
@@ -19,7 +22,7 @@
 	</div>
 	<% @post.comments.each do |comment| %>
 		<div class="well">
-			<p><em>Comment by <strong><%= comment.author %></strong></em></p>
+			<p><em>Comment by <strong><%= comment.user.username %></strong></em></p>
 			<% @created_at = comment.created_at.in_time_zone("America/Chicago") %>
 			<p><em><%= @created_at.strftime("Posted on %m/%d/%Y at %l:%M%p %Z") %></em></p>
 			<p><%= comment.comment_entry %></p>
