--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -11,7 +11,7 @@
 
   <body>
     <nav class="navbar navbar-default navbar-fixed-top" role="navigation">
-      <div class="container-fluid">
+      <div class="container">
       <div class="navbar-header">
         <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar-collapse-1" aria-expanded="false">
           <span class="sr-only">Toggle navigation</span>
@@ -19,22 +19,21 @@
           <span class="icon-bar"></span>
           <span class="icon-bar"></span>
         </button>
-        <a class="navbar-brand" href="posts">Jacob's Blog</a>
+        <%= link_to "Jacob's Blog", :posts, class: "navbar-brand" %>
       </div>
       <div class="collapse navbar-collapse" id="navbar-collapse-1">
         <ul class="nav navbar-nav">
-          <li><a href="posts">Blog Posts</a></li>
+          <li><%= link_to "Blog Posts", :posts %></li>
+          <li><%= button_to "Edit Profile", edit_user_registration_path, class: "navbar-btn btn btn-primary" %></li>
+          <li><%= button_to "Sign Out", destroy_user_session_path, method: :delete, class: "navbar-btn btn btn-danger" %></li>
         </ul>
       </div>
     </nav>
     <div class="container">
       <% if user_signed_in? %>
         <div class="pull-right">
-          <p>
-            Welcome, <%= current_user.username %>!</p>
-            <%= image_tag current_user.avatar.url if current_user.avatar.url != nil %>
-          <%= link_to "Edit Profile", edit_user_registration_path, class: "btn btn-primary" %>
-          <%= link_to "Sign Out", destroy_user_session_path, method: :delete, class: "btn btn-danger" %>
+          <p>Welcome, <%= current_user.username %>!</p>
+          <%= render 'layouts/current_avatar' %>
         </div>
       <% end %>
     </div>
