--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -2,38 +2,32 @@
 
 <%= form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f| %>
   <%= devise_error_messages! %>
+<div class="container col-md-6 col-md-offset-3 col-xs-10 col-xs-offset-1">
+    <div class="well">
+      <div class="form-group">
+        <%= f.email_field :email, autofocus: true, autocomplete: "email", placeholder: 'Email', class: 'form-control' %>
+        <%= f.text_field :username, placeholder: 'Username', class: 'form-control' %>
 
-  <div class="form-group">
-    <div class="form-control">
-      <%= f.label :email %><br />
-      <%= f.email_field :email, autofocus: true, autocomplete: "email" %>
-    </div>
+        <div class="form-group">
+          <%= f.label :password %><br />
+          <% if @minimum_password_length %>
+          <em>(<%= @minimum_password_length %> characters minimum)</em>
+          <% end %><br />
+          <%= f.password_field :password, autocomplete: "off", class: 'form-control' %>
+        </div>
 
-    <div>
-      <%= f.label :username %><br />
-      <%= f.text_field :username %>
-    </div>
+        <div class="form-group">
+          <%= f.label :password_confirmation %><br />
+          <%= f.password_field :password_confirmation, autocomplete: "off", class: 'form-control' %>
+        </div>
 
-    <div class="form-control">
-      <%= f.label :password %>
-      <% if @minimum_password_length %>
-      <em>(<%= @minimum_password_length %> characters minimum)</em>
-      <% end %><br />
-      <%= f.password_field :password, autocomplete: "off" %>
-    </div>
+        <div class="form-group">
+          <strong>Upload a Profile Pic:</strong>
+          <%= f.file_field :avatar, class: 'form-control' %>
+        </div>
 
-    <div class="form-control">
-      <%= f.label :password_confirmation %><br />
-      <%= f.password_field :password_confirmation, autocomplete: "off" %>
-    </div>
-
-    <div class="form-group">
-      <strong>Upload a Profile Pic:</strong>
-      <%= f.file_field :avatar %>
-    </div>
-
-    <div class="form-control">
-      <%= f.submit "Sign up" %>
+        <%= f.submit "Sign up", class: 'form-control btn btn-primary' %>
+      </div>
     </div>
   </div>
 
