--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -24,7 +24,7 @@
       <div class="collapse navbar-collapse" id="navbar-collapse-1">
         <ul class="nav navbar-nav">
           <li><%= link_to "Blog Posts", :posts %></li>
-          <li><%= button_to "Edit Profile", edit_user_registration_path, class: "navbar-btn btn btn-primary" %></li>
+          <li><%= button_to "Edit Profile", edit_user_registration_path, method: :get, class: "navbar-btn btn btn-primary" %></li>
           <li><%= button_to "Sign Out", destroy_user_session_path, method: :delete, class: "navbar-btn btn btn-danger" %></li>
         </ul>
       </div>
