--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -5,27 +5,9 @@
 <div class="container-fluid">
   <div class="row">
     <% @posts.each do |post| %>
-    <div class="col-xs-12 col-md-6 clearfix">
-      <div class="panel panel-default">
-        <div class="panel-heading">
-          <h2><%= post.title %></h2>
-          <%= render 'post_avatar', :post => post %>
-          <strong> by <%= post.user.username %></strong>
-          <% @create_time = post.created_at.in_time_zone("America/Chicago") %>
-          <p><%= @create_time.strftime("Posted %m/%d/%Y at %l:%M%P %Z") %></p>
-        </div>
-        <div class="panel-body">
-          <%= post.blog_entry %>
-          <%= render 'with_picture', :post => post %>
-        </div>
-        <div class="panel-footer">
-          <%= link_to 'Show', post, :class => "btn btn-info" %>
-          <%= link_to 'Edit', edit_post_path(post), :class => "btn btn-warning" %>
-          <%= link_to 'Delete', post, method: :delete, data: { confirm: 'Are you sure?' }, :class => "btn btn-danger" %>
-        </div>
-      </div>
-    </div>
+    <%= render 'show_post', :post => post %>
   <% end %>
+  <%= paginate @posts %>
   </div>
 </div>
 
